--- a/app/views/form/index.html.erb
+++ b/app/views/form/index.html.erb
@@ -5,26 +5,41 @@
   <%= form.hidden_field :Oemadm, value: ENV["ORDER_EMAIL"] %>
   <%= form.hidden_field :Quantity, value: 1 %>
 
-  <%= form.label "ISBN:" %> 
-  <%= form.text_field :ISBN, value: params[:isbn], readonly: true %><br />
+  <div class="field half last">
+    <%= form.label "ISBN:" %> 
+    <%= form.text_field :ISBN, value: params[:isbn], readonly: true, size: "100x1"  %>
+  </div> 
 
-  <%= form.label "Name:" %>
-  <%= form.text_field :Facmemb, value: session['cas']['extra_attributes']['displayName'], readonly: true %><br />
+  <div class="field half last">
+    <%= form.label "Name:" %> 
+    <%= form.text_field :Facmemb, value: session['cas']['extra_attributes']['displayName'], readonly: true , size: "100x1"  %>
+  </div>  
 
-  <%= form.label "Department:" %> 
-  <%= form.text_field :intrdisc, value: session['cas']['extra_attributes']['busoff'], readonly: true %><br />
+  <div class="field half last">
+    <%= form.label "Department:" %> 
+    <%= form.text_field :intrdisc, value: session['cas']['extra_attributes']['busoff'], readonly: true, size: "100x1"  %>
+  </div>    
 
-  <%= form.label "Email:" %>
-  <%= form.text_field :Oemend, value: session['cas']['extra_attributes']['mail'], readonly: true %><br />
+  <div class="field half last">
+    <%= form.label "Email:" %>
+    <%= form.text_field :Oemend, value: session['cas']['extra_attributes']['mail'], readonly: true, size: "100x1"  %>
+  </div>    
 
-  <%= form.label "Pickup Location:" %>
-  <%= form.select :Site, options_for_select(["Downtown Campus Library", "Evansdale Library", "George R. Farmer Jr. Law Library", "Health Sciences Library", "Health Sciences Library (Charleston)", "Mary F. Shipper Library", "Institute of Technology, Beckley Campus", "West Virginia & Regional History Center"]), prompt: "Select One", class: 'genForm_dropBox' %><br />
+  <div class="field">
+    <%= form.label "Pickup Location:" %>
+    <%= form.select :Site, options_for_select(["Downtown Campus Library", "Evansdale Library", "George R. Farmer Jr. Law Library", "Health Sciences Library", "Health Sciences Library (Charleston)", "Mary F. Shipper Library", "Institute of Technology, Beckley Campus", "West Virginia & Regional History Center"]), prompt: "Select One", class: 'genForm_dropBox' %><br />
+  </div>
 
-  <%= form.label "University Role:" %>
-  <%= form.select :Role, options_for_select(["Faculty", "Undergrad", "Grad", "Staff", "Other"], params[:role]), class: 'genForm_dropBox' %><br />
+  <div class="field">
+    <%= form.label "University Role:" %>
+    <%= form.select :Role, options_for_select(["Faculty", "Undergrad", "Grad", "Staff", "Other"], params[:role]), class: 'genForm_dropBox' %>
+  </div>
 
-  <%= form.label "Note:" %>
-  <%= form.text_area :IntNotes %><br />
-  <%= form.submit  %>
+  <div class="field full">
+    <%= form.label "Note:" %>
+    <%= form.text_area :IntNotes, size: "100x10" %>
+  </div>
+
+  <%= form.submit "Order Book" %>
 
 <% end  %>
