--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title> <%= yield :title %> :: DDA Oasis Form :: WVU </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= yield :head %>
   </head>
 
   <body>
-
     <!-- Header -->
     <%= render(:partial => 'shared/header') %>
 
     <!-- Main -->
     <main id="main" class="frontend">
-      <div class="wvu-container">
+      <div class="wvu-container"> 
+        
         <!-- Yield -->
         <div class="app-main-content">
           <%= yield %>
         </div>
       </div>
+
+  <!-- Footers -->
+  <%= render(:partial => 'shared/builtby_footer') %>
     </main>
 
-    <!-- Footers -->
-    <%= render(:partial => 'shared/builtby_footer') %>
+    <!-- JavaScripts -->
+    <%= yield :js %>
   </body>
-
 </html>
