form_controller error update
adjusted the form_controller to handle errors from the api.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
 
   <body>
     <!-- Header -->
-    <%= render(:partial => 'shared/header') %>
+    <%= render(:partial => 'shared/header') %> 
 
     <!-- Main -->
     <main id="main" class="frontend">
       <div class="wvu-container"> 
+        <!-- Flash -->
+        <%= render "utilities/alerts" %>
+              
         <!-- Yield -->
         <div class="app-main-content">
           <%= yield %>
