--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
 <header class="wvu-masthead">
   <div class="wvu-masthead__container"> 
     <a class="wvu-masthead__logo header-logo" href="/">
-      <span class="wvu-masthead__title"> DDA Oasis Book Form </span>
+      <span class="wvu-masthead__title"> Libraries </span>
     </a>
   </div>   
 </header>
