--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title> <%= yield :title %> :: DDA Oasis Form :: WVU </title>
     <%= csrf_meta_tags %>
