adjusted the padding on the  wvu-masthead.scss

--- a/app/assets/stylesheets/brand/_wvu-masthead.scss
+++ b/app/assets/stylesheets/brand/_wvu-masthead.scss
@@ -6,7 +6,7 @@ $flying-wv-w-sub-brand: 'https://patterns.wvu.edu/images/flying-wv-w-signature.p
 .wvu-masthead { 
   background-color: $wvu-blue;
   color:#fff;  
-    padding-bottom: 40px;  
+  padding: 0px 0px 15px 15px;  
 
   .wvu-masthead__container { 
     padding:1em;
