--- a/app/assets/stylesheets/elements/_forms.scss
+++ b/app/assets/stylesheets/elements/_forms.scss
@@ -1,7 +1,13 @@
-$font-color:#666;
-$input-bg: #eee; 
-$input-border: #666;
-$disabled-color: $input-border; 
+.field { 
+  @include clearfix;
+}
+
+.full { 
+  text-align:left;
+  display:block; 
+  width:100%;
+  margin-bottom:1em;
+}
 
 label, .heading { 
     text-align:left;
@@ -33,23 +39,23 @@ textarea {
     line-height:1.5; 
     font-weight:500;
     letter-spacing: 1px;
-    background:$input-bg;
+    background:$default;
     padding:1.25em;
     margin-top:.5em;
     @include transition(
-    color 0.6s $easeOutExpo, 
-    border 0.6s $easeOutExpo, 
-    background 0.6s $easeOutExpo
+      color 0.6s $easeOutExpo, 
+      border 0.6s $easeOutExpo, 
+      background 0.6s $easeOutExpo
     );
-    border: 2px solid darken($input-bg,10%);
+    border: 2px solid darken($default,10%);
 
     &:focus, &:hover { 
-    border: 2px solid $link-color;
-    background: lighten($input-bg,2%);
+      border: 2px solid $link-color;
+      background: lighten($default,2%);
     }
 
     &::placeholder { 
-    color:darken($input-bg,20%);
+    color:darken($default,20%);
     }
 }
 
@@ -64,7 +70,7 @@ select {
     position:relative;
     font-weight:500;
     letter-spacing: 1px;
-    border: 2px solid darken($input-bg,10%);
+    border: 2px solid darken($default,10%);
 }
 
 
@@ -73,7 +79,7 @@ input:not([type='submit']){
     height:60px;
     padding:1.25em; 
     border:none;
-    background:$input-bg;
+    background:$default;
     font-weight:500;
     font-size:1em; 
     letter-spacing: 1px;
@@ -83,15 +89,15 @@ input:not([type='submit']){
       background 0.6s $easeOutExpo
     );
 
-    border: 2px solid darken($input-bg,10%);
+    border: 2px solid darken($default,10%);
     &:focus, &:hover { 
       cursor: pointer;
       border: 2px solid $link-color;
-      background: lighten($input-bg,2%);
+      background: lighten($default,2%);
     }
 
     &::placeholder { 
-      color:darken($input-bg,20%);
+      color:darken($default,20%);
     }
 
     &.disabled { 
