--- a/app/assets/stylesheets/elements/_wrapper.scss
+++ b/app/assets/stylesheets/elements/_wrapper.scss
@@ -1,12 +1,18 @@
 .wrapper { 
     width:100%; 
-    padding: 1em; 
+    padding: 1em;   
+          
+    min-height: 100vh;
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 100px;
 }
 
 .container { 
     width:100%; 
     margin:0 auto; 
-    max-width: 768px; 
+    max-width: 768px;
 }
 
 .app-main-content {
