--- a/app/views/utilities/_alerts.html.erb
+++ b/app/views/utilities/_alerts.html.erb
@@ -1,7 +1,7 @@
 <% flash.each do |key, value| %>
   <div class="alert <%= key %>">
     <div class="content"> <%= value %> </div>
-    <div class="exit-alert" id="exit-alert"> 
+    <div class="exit-alert"> 
       <span class="fas fa-times-circle" aria-hidden="true"></span> 
     </div>
   </div>
