fix cas login issues

--- a/app/views/form/index.html.erb
+++ b/app/views/form/index.html.erb
@@ -1,43 +1,1 @@
-
-<%= form_for :item_request, url: "/" do |form| %>
-
-  <div>
-    <div class="field full">
-      <%= form.label :ISBN, 'ISBN:'%> 
-      <%= form.text_field :ISBN, value: params[:isbn], readonly: true, size: '100x1'%>
-    </div>
-
-    <div class="field full">
-      <%= form.label :Facmemb, "Name:" %> 
-      <%= form.text_field :Facmemb, value: session['cas']['extra_attributes']['displayName'], readonly: true , size: "100x1"  %>
-    </div>
-
-    <div class="field full">
-      <%= form.label :intrdisc, "Department:" %> 
-      <%= form.text_field :intrdisc, value: session['cas']['extra_attributes']['busoff'], readonly: true, size: "100x1"  %>
-    </div>
-
-    <div class="field full">
-      <%= form.label :Oemend, "Email:" %>
-      <%= form.text_field :Oemend, value: session['cas']['extra_attributes']['mail'], readonly: true, size: "100x1"  %>
-    </div>
-
-    <div class="field full">
-      <%= form.label :Site, "Pickup Location:"%>
-      <%= form.select :Site, options_for_select(["Downtown Campus Library", "Evansdale Library", "George R. Farmer Jr. Law Library", "Health Sciences Library", "Health Sciences Library (Charleston)", "Mary F. Shipper Library", "Institute of Technology, Beckley Campus", "West Virginia & Regional History Center"]), prompt: "Select One", class: 'genForm_dropBox' %><br />
-    </div>
-
-    <div class="field full">
-      <%= form.label :Role, "University Role:" %>
-      <%= form.select :Role, options_for_select(["Faculty", "Undergrad", "Grad", "Staff", "Other"], params[:role]), class: 'genForm_dropBox' %>
-    </div>
-
-    <div class="field full">
-      <%= form.label :IntNotes, "Note:" %>
-      <%= form.text_area :IntNotes, size: "100x10" %>
-    </div>  
-  </div>
-
-  <%= form.submit "Order Book" %>
-
-<% end  %>
+<p> form index page </p>
