--- a/app/views/form/create.html.erb
+++ b/app/views/form/create.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for :item_request, url: "/" do |form| %>
+<%= form_for :item_request, url: "/submit" do |form| %>
 
   <div>
     <div class="field full">
