added nagios check to application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- nagios check -->
 <html lang="en">
   <head>
     <title> <%= yield :title %> :: DDA Oasis Form :: WVU </title>
