--- a/app/views/item_request/new.html.erb
+++ b/app/views/item_request/new.html.erb
@@ -10,6 +10,10 @@
       </ul>
     </div>
   <% end %>
+  <div>
+    <p>Please fill out the form below. Your request will initiate the purchase of this book for your use. This is a process that may take up to 3 weeks before the book is available for check out. We will notify you when it is available to pick up at the library you indicated below. If you require the book sooner, please place your request through <a href="https://illiad.lib.wvu.edu/illiad.dll/OpenURL">https://illiad.lib.wvu.edu/illiad.dll/OpenURL</a>).
+    </p>
+  </div>
 
   <div>
     <div class="field full">
@@ -34,7 +38,7 @@
 
     <div class="field full">
       <%= form.label :Site, "Pickup Location:"%>
-      <%= form.select :Site, options_for_select(["Downtown Campus Library", "Evansdale Library", "George R. Farmer Jr. Law Library", "Health Sciences Library", "Health Sciences Library (Charleston)", "Mary F. Shipper Library", "Institute of Technology, Beckley Campus", "West Virginia & Regional History Center"], @item_request.try(:Site)), prompt: "Select One", class: 'genForm_dropBox', required: true %><br />
+      <%= form.select :Site, options_for_select(["Downtown Campus Library", "Evansdale Library", "George R. Farmer Jr. Law Library", "Health Sciences Library", "West Virginia & Regional History Center"], @item_request.try(:Site)), prompt: "Select One", class: 'genForm_dropBox', required: true %><br />
     </div>
 
     <div class="field full">
