change isbn in form for illiad link

--- a/app/views/item_request/new.html.erb
+++ b/app/views/item_request/new.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <div>
-    <p>Please fill out the form below. Your request will initiate the purchase of this book for your use. This is a process that may take up to 3 weeks before the book is available for check out. We will notify you when it is available to pick up at the library you indicated below. If you require the book sooner, please place your request through <a href="https://illiad.lib.wvu.edu/illiad.dll?Action=10&Form=30&isbn=<%= params['ISBN']%>&title=<%= params['title'] %>">iLLiad</a>.
+    <p>Please fill out the form below. Your request will initiate the purchase of this book for your use. This is a process that may take up to 3 weeks before the book is available for check out. We will notify you when it is available to pick up at the library you indicated below. If you require the book sooner, please place your request through <a href="https://illiad.lib.wvu.edu/illiad.dll?Action=10&Form=30&isbn=<%= @item_request.ISBN %>&title=<%= params['title'] %>">iLLiad</a>.
     </p>
   </div>
 
