Adjusted language on the new request page

--- a/app/views/item_request/new.html.erb
+++ b/app/views/item_request/new.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <div>
-    <p>Please fill out the form below to order the PRINT book. Your request will initiate the purchase of this book for the Libraries’ collection with semester loans and renewal privileges. This is a process that may take 2-3 weeks. You will be notified when it is available to pick up at the designated library. If you require the book sooner, please place your request through <a href="https://illiad.lib.wvu.edu/illiad.dll?Action=10&Form=30&isbn=<%= @item_request.ISBN %>&title=<%= params['title'] %>">ILLiad</a>.
+    <p>Please fill out the form below to order the PRINT book. Your request will initiate the purchase of this book for the Libraries’ collection, allowing for semester loans and renewal privileges. This is a process that may take 2-3 weeks. You will be notified when it is available to pick up at the designated library. If you require the book sooner, please place your request through <a href="https://illiad.lib.wvu.edu/illiad.dll?Action=10&Form=30&isbn=<%= @item_request.ISBN %>&title=<%= params['title'] %>">ILLiad</a>.
     </p>
   </div>
 
